crates/wat-core/tests/snapshots/lexer__snap_lex_error_single_quote.snap
---
source: crates/wat-core/tests/lexer.rs
expression: err
---
LexError {
    message: "unterminated single quote",
    offset: 0,
}
