crates/wat-core/tests/snapshots/lexer__snap_lex_error_trailing_backslash.snap
---
source: crates/wat-core/tests/lexer.rs
expression: err
---
LexError {
    message: "trailing backslash",
    offset: 5,
}
