crates/wat-core/tests/snapshots/lexer__snap_mixed_quoting.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(r#\"hel'lo '\"world\"\"#)"
---
[
    Word(
        "hel\u{2}lo \u{2}\u{4}world\u{4}",
    ),
    Eof,
]
