crates/wat-core/tests/snapshots/lexer__snap_multiple_args.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"ls -la /tmp\")"
---
[
    Word(
        "ls",
    ),
    Word(
        "-la",
    ),
    Word(
        "/tmp",
    ),
    Eof,
]
