crates/wat-core/tests/snapshots/lexer__snap_newline.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"a\\nb\")"
---
[
    Word(
        "a",
    ),
    Newline,
    Word(
        "b",
    ),
    Eof,
]
