crates/wat-core/tests/snapshots/lexer__snap_pipeline.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"ls | grep foo\")"
---
[
    Word(
        "ls",
    ),
    Pipe,
    Word(
        "grep",
    ),
    Word(
        "foo",
    ),
    Eof,
]
