crates/wat-core/tests/snapshots/lexer__snap_redirect_append.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"echo hi >> out.txt\")"
---
[
    Word(
        "echo",
    ),
    Word(
        "hi",
    ),
    RedirectAppend,
    Word(
        "out.txt",
    ),
    Eof,
]
