crates/wat-core/tests/snapshots/lexer__snap_redirect_in.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"cat < in.txt\")"
---
[
    Word(
        "cat",
    ),
    RedirectIn,
    Word(
        "in.txt",
    ),
    Eof,
]
