crates/wat-core/tests/snapshots/lexer__snap_redirect_no_space.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"echo hi>out.txt\")"
---
[
    Word(
        "echo",
    ),
    Word(
        "hi",
    ),
    RedirectOut,
    Word(
        "out.txt",
    ),
    Eof,
]
