crates/wat-core/tests/snapshots/lexer__snap_semicolon.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"a ; b ; c\")"
---
[
    Word(
        "a",
    ),
    Semicolon,
    Word(
        "b",
    ),
    Semicolon,
    Word(
        "c",
    ),
    Eof,
]
