crates/wat-core/tests/snapshots/lexer__snap_semicolons_no_space.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"a;b;c\")"
---
[
    Word(
        "a",
    ),
    Semicolon,
    Word(
        "b",
    ),
    Semicolon,
    Word(
        "c",
    ),
    Eof,
]
